--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "symfony/var-dumper": "^5.2|^6.0|^7.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.89",
         "pestphp/pest": "^2.36.0|^3.0|^4.0",
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan-deprecation-rules": "^1.2",
@@ -42,7 +43,7 @@
     "scripts": {
         "analyse": "vendor/bin/phpstan analyse",
         "baseline": "vendor/bin/phpstan analyse --generate-baseline",
-        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes --config=.php_cs.php",
         "test": "vendor/bin/pest",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
