--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,11 +1,6 @@
 parameters:
 	ignoreErrors:
 		-
-			message: "#^Method Spatie\\\\FlareClient\\\\Flare\\:\\:application\\(\\) should return Spatie\\\\FlareClient\\\\Recorders\\\\ApplicationRecorder\\\\ApplicationRecorder but returns Spatie\\\\FlareClient\\\\Contracts\\\\Recorders\\\\Recorder\\.$#"
-			count: 1
-			path: src/Flare.php
-
-		-
 			message: "#^Method Spatie\\\\FlareClient\\\\Flare\\:\\:cache\\(\\) should return Spatie\\\\FlareClient\\\\Recorders\\\\CacheRecorder\\\\CacheRecorder\\|null but returns Spatie\\\\FlareClient\\\\Contracts\\\\Recorders\\\\Recorder\\|null\\.$#"
 			count: 1
 			path: src/Flare.php
@@ -71,11 +66,6 @@ parameters:
 			path: src/Flare.php
 
 		-
-			message: "#^Parameter \\#1 \\$callback of function set_error_handler expects \\(callable\\(int, string, string, int\\)\\: bool\\)\\|null, array\\{\\$this\\(Spatie\\\\FlareClient\\\\Flare\\), 'handleError'\\} given\\.$#"
-			count: 2
-			path: src/Flare.php
-
-		-
 			message: "#^Access to an undefined property Spatie\\\\FlareClient\\\\Contracts\\\\FlareCollectType\\:\\:\\$value\\.$#"
 			count: 4
 			path: src/FlareConfig.php
@@ -121,6 +111,21 @@ parameters:
 			path: src/Recorders/SpansRecorder.php
 
 		-
+			message: "#^Parameter \\#1 \\$callback of function set_error_handler expects \\(callable\\(int, string, string, int\\)\\: bool\\)\\|null, array\\{\\$this\\(Spatie\\\\FlareClient\\\\Reporter\\), 'handleError'\\} given\\.$#"
+			count: 2
+			path: src/Reporter.php
+
+		-
+			message: "#^Method Spatie\\\\FlareClient\\\\Support\\\\Container\\:\\:resolveAutowiringDefinition\\(\\) should return array\\<string, array\\{id\\: class\\-string, default\\?\\: mixed\\}\\>\\|null but returns array\\<non\\-empty\\-string, array\\{id\\: string, default\\: mixed\\}\\>\\.$#"
+			count: 1
+			path: src/Support/Container.php
+
+		-
 			message: "#^Access to an undefined property Spatie\\\\FlareClient\\\\Contracts\\\\FlareSpanType\\:\\:\\$value\\.$#"
 			count: 2
+			path: src/Tracer.php
+
+		-
+			message: "#^Comparison operation \"\\>\" between int\\<1, max\\> and 0 is always true\\.$#"
+			count: 1
 			path: src/Tracer.php
