Add exception code to report and payload

--- a/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
+++ b/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
@@ -1,6 +1,7 @@
 exceptionClass: PHPUnit\Framework\Exception
 seenAtUnixNano: 1546346096000000000
 message: 'This is a test'
+code: 0
 solutions: {  }
 stacktrace: {  }
 openFrameIndex: null
