--- a/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
@@ -1,6 +1,7 @@
 exceptionClass: Exception
 seenAtUnixNano: 1546305825000000000
 message: 'this is an exception'
+code: 1337
 solutions: {  }
 stacktrace: {  }
 openFrameIndex: null
