--- a/tests/__snapshots__/ReportTest__it_can_create_an_error_exception_report__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_an_error_exception_report__1.yml
@@ -1,6 +1,7 @@
 exceptionClass: ErrorException
 seenAtUnixNano: 1546305825000000000
 message: 'this is a custom error'
+code: 0
 solutions: {  }
 stacktrace: {  }
 openFrameIndex: null
