--- a/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message_with_stack_trace__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report_for_a_string_message_with_stack_trace__1.yml
@@ -1,6 +1,7 @@
 exceptionClass: Log
 seenAtUnixNano: 1546305825000000000
 message: 'this is a message'
+code: null
 solutions: {  }
 stacktrace: {  }
 openFrameIndex: null
