Further logging enhancements

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "phpstan/extension-installer": "^1.4",
         "phpstan/phpstan-deprecation-rules": "^1.2",
         "phpstan/phpstan-phpunit": "^1.4",
+        "spatie/invade": "^2.1",
         "spatie/pest-plugin-snapshots": "^2.2"
     },
     "autoload": {
