--- a/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
+++ b/tests/__snapshots__/FlareTest__it_can_report_an_exception__1.yml
@@ -3,6 +3,7 @@ seenAtUnixNano: 1546346096000000000
 message: 'This is a test'
 solutions: {  }
 stacktrace: {  }
+previous: {  }
 openFrameIndex: null
 applicationPath: null
 trackingUuid: fake-uuid
