--- a/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_a_report__1.yml
@@ -3,6 +3,7 @@ seenAtUnixNano: 1546305825000000000
 message: 'this is an exception'
 solutions: {  }
 stacktrace: {  }
+previous: {  }
 openFrameIndex: null
 applicationPath: null
 trackingUuid: fake-uuid
