--- a/tests/__snapshots__/ReportTest__it_can_create_an_error_exception_report__1.yml
+++ b/tests/__snapshots__/ReportTest__it_can_create_an_error_exception_report__1.yml
@@ -3,6 +3,7 @@ seenAtUnixNano: 1546305825000000000
 message: 'this is a custom error'
 solutions: {  }
 stacktrace: {  }
+previous: {  }
 openFrameIndex: null
 applicationPath: null
 trackingUuid: fake-uuid
