--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "phpstan/phpstan-deprecation-rules": "^1.2",
         "phpstan/phpstan-phpunit": "^1.4",
         "spatie/invade": "^2.1",
-        "spatie/pest-plugin-snapshots": "^2.2"
+        "spatie/pest-plugin-snapshots": "^2.2",
+        "spatie/ray": "^1.44"
     },
     "autoload": {
         "psr-4": {
